--- a/src/variables.scss
+++ b/src/variables.scss
@@ -41,5 +41,9 @@ $grid-float-breakpoint:     $screen-lg !default;
 //** Point at which the navbar begins collapsing.
 $grid-float-breakpoint-max: ($grid-float-breakpoint - 1) !default;
 
-$idai-navbar-search-width-diff: 370px !default;
-$idai-navbar-search-width-diff-on-highres: 800px !default;
+/////////////////////
+//== Components specific variables which might be overwritten
+$idai-screen-xl:                           1500px !default;
+$idai-screen-xl-navbar-search-width:       700px !default;
+$screen-lg-navbar-search-width-diff:       800px !default;
+$idai-navbar-search-width-diff:            370px !default;
